# appwrite-reflex-template

./: .cursorrules  .gitignore  main.py  pyproject.toml  rxconfig.py
.cursor/: claude.md
.cursor/agents/: appwrite-specialist.md  backend-architect.md  deployment-engineer.md  docs-specialist.md  reflex-architect.md  ui-specialist.md
app/: app.py  config.py
app/components/: categories_view.py  dashboard_views.py  expenses_view.py  reports_view.py  settings_view.py  shared.py  sidebar.py  theme_toggle.py
app/components/landing/: __init__.py  header.py
app/components/shared/: __init__.py  header.py  sidebar.py  theme_toggle.py
app/pages/admin/: __init__.py  index.py  state.py
app/pages/dashboard/: index.py  state.py
app/pages/landing/: __init__.py  index.py  state.py
app/pages/settings/: __init__.py  index.py  state.py
app/server/api/: __init__.py  health.py
app/server/api/routes/v1/: __init__.py
app/states/: __init__.py  base.py  dashbaord_state.py  dashboard_state.py
scripts/: deploy-backend.sh  deploy-frontend.sh  setup.sh  utils.sh  validate.sh
